src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABM_Account__c</fullName>
        <description>LDC ABM Program</description>
        <inlineHelpText>LDC ABM Program</inlineHelpText>
        <label>ABM Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ABM_Tier__c</fullName>
        <description>LDC ABM Tier</description>
        <inlineHelpText>LDC ABM Tier</inlineHelpText>
        <label>ABM Tier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ABM_Account__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 Star</fullName>
                </value>
                <value>
                    <fullName>3 Star</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AI__c</fullName>
        <description>Used in CrystalBall page for Temperature column.</description>
        <label>zCrystalBall AI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANZ_Multi_Regional_RM__c</fullName>
        <label>ANZ Multi-Regional RM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NAMER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ATS__c</fullName>
        <description>What Applicant Tracking System is the customer currently using?</description>
        <inlineHelpText>Which ATS(s) is customer currently using?</inlineHelpText>
        <label>ATS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADP Recruiting Management</fullName>
                </value>
                <value>
                    <fullName>ADP Workforce Now</fullName>
                </value>
                <value>
                    <fullName>ApplicantPro</fullName>
                </value>
                <value>
                    <fullName>Avature</fullName>
                </value>
                <value>
                    <fullName>Bamboo HR</fullName>
                </value>
                <value>
                    <fullName>Beisen</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Bullhorn</fullName>
                </value>
                <value>
                    <fullName>Bumeran</fullName>
                </value>
                <value>
                    <fullName>Catho</fullName>
                </value>
                <value>
                    <fullName>CGI NJoyn</fullName>
                </value>
                <value>
                    <fullName>Click to Cloud</fullName>
                </value>
                <value>
                    <fullName>Cornerstone OnDemand</fullName>
                </value>
                <value>
                    <fullName>Dayee</fullName>
                </value>
                <value>
                    <fullName>Elempleo</fullName>
                </value>
                <value>
                    <fullName>eRecruit</fullName>
                </value>
                <value>
                    <fullName>Greenhouse</fullName>
                </value>
                <value>
                    <fullName>HireVue</fullName>
                </value>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>IBM Kenexa Brassring</fullName>
                </value>
                <value>
                    <fullName>iCIMS</fullName>
                </value>
                <value>
                    <fullName>Infor PeopleAnswers</fullName>
                </value>
                <value>
                    <fullName>JazzHR (formerly The Resumator)</fullName>
                </value>
                <value>
                    <fullName>JobAdder</fullName>
                </value>
                <value>
                    <fullName>JobDiva</fullName>
                </value>
                <value>
                    <fullName>JobScience</fullName>
                </value>
                <value>
                    <fullName>Jobscore</fullName>
                </value>
                <value>
                    <fullName>Jobvite</fullName>
                </value>
                <value>
                    <fullName>JXT</fullName>
                </value>
                <value>
                    <fullName>Lever</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Aggregate_Int_Score_LHS_Cust__c</fullName>
        <description>Per: https://na4.salesforce.com/a1W60000000DURF</description>
        <label>Account Aggregate Int Score - LHS Cust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Aggregate_Interest_Score__c</fullName>
        <description>The sum of the weighted interest score for all associated contacts. This calculation is triggered via code.</description>
        <label>Account Aggregate Interest Score - LHS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Aggregate_Score_LMS__c</fullName>
        <label>Account Aggregate Interest Score - LMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Aggregate_Score_LSS__c</fullName>
        <label>Account Aggregate Interest Score - LSS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Alerts_Count__c</fullName>
        <description>Used in CrystalBall page for Alert column.</description>
        <label>zCrystalBall Alert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Center__c</fullName>
        <description>ABACUS - Hyperlink that takes users to Account Center to create new quote for Abacus</description>
        <formula>HYPERLINK(&quot;/apex/Abacus#/wizard/account_selection?accountId=&quot;+Id, IMAGE(&quot;/resource/AbacusCreateQuote&quot;,&quot;Launch Account Center to create new Quote.&quot;))</formula>
        <label>Account Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Interest__c</fullName>
        <description>Account Interest from PMAT</description>
        <label>Account Interest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Main_Fields_Last_Modified_Date__c</fullName>
        <description>Date when account name, url, billing address, or shipping address changed</description>
        <inlineHelpText>Date when account name, url, billing address, or shipping address changed</inlineHelpText>
        <label>Account Main Fields Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Identifying field to be entered in to the CS Tool to signify the Account tied to the assigned privileges.  This field should be entered in the CS Tool field titled &quot;Salesforce Contract ID&quot; when setting up the &quot;Contract&quot; in the CS Tool.  NOT tied to a Contract in salesforce - two different meanings for the same term</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit account ID</inlineHelpText>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Source__c</fullName>
        <description>AccountSource field is not visible in reports outside of Account object. This formula field will allow filtering and display of data</description>
        <formula>TEXT(AccountSource)</formula>
        <inlineHelpText>AccountSource field as formula.</inlineHelpText>
        <label>Account Source (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Synced_to_SalesLoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked by SalesLoft once the account is synced.</description>
        <inlineHelpText>This field will be checked by SalesLoft once the account is synced.</inlineHelpText>
        <label>Account Synced to SalesLoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Author</fullName>
                </value>
                <value>
                    <fullName>Agent/Licensor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Used in CrystalBall page for CAW calculation in Alert Section.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zCrystalBall AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Renewal__c</fullName>
        <description>Hidden field, only visible for reports. Utilized for dashboard report for account renewal rate.</description>
        <formula>IF ( Renewal_Count__c &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Sub_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this account have an active instance of Recruiter?</inlineHelpText>
        <label>Active Sub Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>KEEP FOR CLOUD9</description>
        <formula>IF(Latest_Contract_End_Date__c &gt;  TODAY() , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>This account has an active running contract.</inlineHelpText>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Spend_Current_Year_to_Date__c</fullName>
        <description>Amount a client has purchased though LI Online Ads since Jan 1st of current year. Boomi will update this field every month on the 1st day of the month.</description>
        <inlineHelpText>Amount a client has purchased though LI Online Ads since Jan 1st of current year. Boomi will update this field every month on the 1st day of the month.</inlineHelpText>
        <label>Ad Spend Current Year to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Spend_Previous_Year__c</fullName>
        <description>Amount a client has purchased though LI Online Ads from Jan 1st to Dec 31st of previous year. Boomi will update this field every month on the 1st day of the month.</description>
        <inlineHelpText>Amount a client has purchased though LI Online Ads from Jan 1st to Dec 31st of previous year. Boomi will update this field every month on the 1st day of the month.</inlineHelpText>
        <label>Ad Spend Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add_Account_Team_Member__c</fullName>
        <description>This link will add RM to Account Team</description>
        <formula>If((($Profile.Id = $Label.LDC_Sales_Management || (BEGINS($UserRole.Name,&apos;TAL-AP&apos;))) &amp;&amp; 
((CONTAINS($UserRole.Name, &quot;LDC&quot;)|| ISPICKVAL( $User.Business_Unit__c , &quot;LDC&quot;) ) &amp;&amp; (CONTAINS( UPPER($UserRole.Name) , &quot;-MGR&quot;) || CONTAINS( UPPER($UserRole.Name) , &quot;-DIR&quot;) || 
CONTAINS( UPPER($UserRole.Name) , &quot;-HEAD&quot;) || CONTAINS( UPPER($UserRole.Name) , &quot;-SRMGR&quot;)))),HYPERLINK(&quot;/apex/LDC_AddRMtoAccountTeam?id=&quot;+Id+&quot;&amp;title=Add RM to Account Team&amp;searchtitle=Search RM&quot; , &quot;Add RM to Account Team&quot;),if((CONTAINS(UPPER($UserRole.Name) , &quot;GLOBAL CUSTOMER SUCCESS ORGANIZATION&quot;) &amp;&amp; CONTAINS($Label.LDC_CSM_MNGR_Ids ,$User.Id)),HYPERLINK(&quot;/apex/LDC_AddRMtoAccountTeam?id=&quot;+Id+&quot;&amp;title=Add CSM to Account Team&amp;searchtitle=Search CSM&quot; , &quot;Add CSM to Account Team&quot;),&quot;No access on this link&quot;))</formula>
        <label>Add Account Team Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Parent_Name__c</fullName>
        <description>Account Name of the Agency Parent. If the Agency Parent is Blank, then it returns the name of the Account.</description>
        <formula>IF( Agency_Parent__r.Name = &quot;&quot;, Name, Agency_Parent__r.Name )</formula>
        <label>Agency Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Per Nimbus, the Parent below the Brand Parent in a hierarchy.</description>
        <label>Agency Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Agency Parent)</relationshipLabel>
        <relationshipName>AgencyParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analyst_Type__c</fullName>
        <description>What type of Analyst does this Account represent?</description>
        <inlineHelpText>What type of Analyst does this Account represent?</inlineHelpText>
        <label>Analyst Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buy Side</fullName>
                </value>
                <value>
                    <fullName>Sell Side</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anchorage_Pilot__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to ramp Anchorage Pilot accounts. #anchorage</description>
        <label>Anchorage Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Areas_Served__c</fullName>
        <label>Areas Served</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asia_Multi_Regional_RM__c</fullName>
        <label>Asia Multi-Regional RM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NAMER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Turnover__c</fullName>
        <description>What is the level of turnover of this Account&apos;s assets?</description>
        <inlineHelpText>What is the level of turnover of this Account&apos;s assets?</inlineHelpText>
        <label>Asset Turnover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Very Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assets_Under_Management_AUM__c</fullName>
        <description>What is the total size of the Assets under the Account&apos;s management?</description>
        <inlineHelpText>What is the total size of the Assets under the Account&apos;s management?</inlineHelpText>
        <label>Assets Under Management (AUM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <description>Email Address of Billing Department</description>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Brand_Parent_Name__c</fullName>
        <description>Account Name of the Brand Parent. If the Brand Parent is Blank, then it returns the name of the Account.</description>
        <formula>if(Brand_Parent__r.Name = &quot;&quot;, Name, Brand_Parent__r.Name)</formula>
        <label>Brand Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Per Nimbus, the Parent below the top Marketing Agency in a hierarchy.</description>
        <label>Brand Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Brand Parent)</relationshipLabel>
        <relationshipName>BrandParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notates that this account is a Business Development account.</description>
        <label>Business Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAP_Account_ID__c</fullName>
        <label>CAP Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_Seats__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>Recruiter seats</inlineHelpText>
        <label>CAP Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Status_LMS__c</fullName>
        <description>Account Status based on SD activity for LMS. Used only in CB.</description>
        <label>CB Status (LMS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Status_LSS__c</fullName>
        <description>Account Status based on SD activity for LSS. Used only in CB.</description>
        <label>CB Status (LSS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Status_LTS__c</fullName>
        <description>Account Status based on SD activity for LTS. Used only in CB.</description>
        <label>CB Status (LTS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEG_Account__c</fullName>
        <description>Connected Enterprise Account - This flag determines whether an Account is a Connected Enterprise Account or not. This is stored in insights to avoid record lock issues and list of fields on Account.</description>
        <formula>Insights__r.CEG_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Connected Enterprise Account</inlineHelpText>
        <label>CEG Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Affected_By_Price_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affected By Price Change ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Corp_Pricing_Tier_CAD__c</fullName>
        <description>Account&apos;s CAD Price Tier for Recruiter Corporate and Job Slots. More info at go/LTSPriceFY16</description>
        <inlineHelpText>Account&apos;s CAD Price Tier for Recruiter Corporate and Job Slots. More info at go/LTSPriceFY16</inlineHelpText>
        <label>zPricing Tier (CAD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CORP BASE PRICE</fullName>
                </value>
                <value>
                    <fullName>CORP EM</fullName>
                </value>
                <value>
                    <fullName>CORP TIER 1</fullName>
                </value>
                <value>
                    <fullName>CORP TIER 2</fullName>
                </value>
                <value>
                    <fullName>CORP TIER 3</fullName>
                </value>
                <value>
                    <fullName>STFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_Corp_Pricing_Tier_USD__c</fullName>
        <description>Account&apos;s USD Price Tier for Recruiter Corporate and Job Slots. More info at go/LTSPriceFY16</description>
        <inlineHelpText>Account&apos;s USD Price Tier for Recruiter Corporate and Job Slots. More info at go/LTSPriceFY16</inlineHelpText>
        <label>zPricing Tier (USD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CORP BASE PRICE</fullName>
                </value>
                <value>
                    <fullName>CORP EM</fullName>
                </value>
                <value>
                    <fullName>CORP TIER 1</fullName>
                </value>
                <value>
                    <fullName>CORP TIER 2</fullName>
                </value>
                <value>
                    <fullName>CORP TIER 3</fullName>
                </value>
                <value>
                    <fullName>STFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_Type__c</fullName>
        <inlineHelpText>Which CRM does this company currently use?</inlineHelpText>
        <label>CRM Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>Apptivo</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Bitrix24</fullName>
                </value>
                <value>
                    <fullName>Bullhorn</fullName>
                </value>
                <value>
                    <fullName>CargoWiseOne</fullName>
                </value>
                <value>
                    <fullName>Goldmine</fullName>
                </value>
                <value>
                    <fullName>Highrise</fullName>
                </value>
                <value>
                    <fullName>Homegrown/spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Hubspot</fullName>
                    <label>HubSpot</label>
                </value>
                <value>
                    <fullName>Infor</fullName>
                </value>
                <value>
                    <fullName>Insightly</fullName>
                </value>
                <value>
                    <fullName>Maximizer</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Odoo</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Pardot</fullName>
                </value>
                <value>
                    <fullName>Pipedrive</fullName>
                </value>
                <value>
                    <fullName>PipelineDeals</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SalesLogix</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Siebel</fullName>
                </value>
                <value>
                    <fullName>Sugar</fullName>
                </value>
                <value>
                    <fullName>Vtiger</fullName>
                </value>
                <value>
                    <fullName>Workbooks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Tool_Account_Name__c</fullName>
        <description>Account Name used in LinkedIn&apos;s CS Tool</description>
        <inlineHelpText>Account Name used in LinkedIn&apos;s CS Tool</inlineHelpText>
        <label>CS Tool Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Tool_Contract_ID__c</fullName>
        <description>CS Tool Contract ID</description>
        <inlineHelpText>CS Tool Contract ID for Recruiter/RPS accounts</inlineHelpText>
        <label>CS Tool Contract ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>China_Bank_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for the OM team to verify and to check if a valid Bank Addendum is attached to the account. Reps cannot Close Won Chinese opportunities if this field is not marked as TRUE.</description>
        <inlineHelpText>This field is for the OM team to verify and to check if a valid Bank Addendum is attached to the account. Reps cannot Close Won Chinese opportunities if this field is not marked as TRUE.</inlineHelpText>
        <label>China Bank Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Churn_Risk__c</fullName>
        <inlineHelpText>Signal that an account may be a churn risk, go to go/churnguard to see detailed churn reason</inlineHelpText>
        <label>Churn Risk</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDisengagedRenewalCount_LTS__c</fullName>
        <description>Field used to count if there are any closed disengaged renewals for LTS in next fiscal year</description>
        <label>ClosedDisengagedRenewalCount(LTS)</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Corp Solutions - Renewal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Disengaged</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Renew_Target_Close_Date__c</field>
            <operation>greaterThan</operation>
            <value>6/30/2019</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ClosedDisengaged__c</fullName>
        <description>closed dis description</description>
        <formula>AND(
ClosedDisengagedRenewalCount_LTS__c &gt; 0,
OR(
ISBLANK(UpcomingRenewalTargetCloseDate__c),
ISNULL(UpcomingRenewalTargetCloseDate__c)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClosedDisengaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collector_Name__c</fullName>
        <description>The collector assigned to the account</description>
        <formula>Insights__r.Collector_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collector Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Page_Viewers__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>Members who viewed the company page in the previous month</inlineHelpText>
        <label>Company Page Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_SK__c</fullName>
        <description>Used for Company SK</description>
        <label>Company_SK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Legal__c</fullName>
        <description>To decide business for legal</description>
        <label>Contact Legal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LTS</fullName>
                </value>
                <value>
                    <fullName>LSS</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <description>Number of Contacts in an Account.  This field is updated nightly via Demand Tools</description>
        <inlineHelpText>Number of Contacts in an Account</inlineHelpText>
        <label># Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Status__c</fullName>
        <description>Accounts where customer authorizes LinkedIn to charge the credit card for all future invoices.</description>
        <inlineHelpText>Accounts where customer authorizes LinkedIn to charge the credit card for all future invoices.</inlineHelpText>
        <label>Credit Card Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Check_Status__c</fullName>
        <description>Status to determine the status of a credit check. This field is only updatable by Finance Credit Team. #anchorage</description>
        <inlineHelpText>Status to determine the status of a credit check. This field is only updatable by Finance Credit Team.</inlineHelpText>
        <label>Credit Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Below Threshold</fullName>
                    <label>Approve - Below Threshold</label>
                </value>
                <value>
                    <fullName>Net 30 - No Credit</fullName>
                </value>
                <value>
                    <fullName>Not Credit Checked</fullName>
                    <default>true</default>
                    <label>Not Credit Checked</label>
                </value>
                <value>
                    <fullName>Past-due Hold</fullName>
                </value>
                <value>
                    <fullName>Pending Manual Review</fullName>
                </value>
                <value>
                    <fullName>Prepay - High Risk</fullName>
                </value>
                <value>
                    <fullName>Prepay - Insufficient Information</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Write-off Hold</fullName>
                </value>
                <value>
                    <fullName>Manual Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>